2000-12-11  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* util.c (get_anon_passwd): move to util.c from main.c.

	* main.c (main): adapt to changes of ftp_connect and ftp_login.
	* ftp.c (ftp_connect, ftp_login, ftp_reconnect): set and use
	connection info variables.  NULL host or user means use old
	values.  only ask user for password if server wants one.
	
	* ftp.c (ftp_host, ftp_prt, ftp_user, ftp_pass, ftp_anon):
	functions to access connection info.

	* ftp.c: prepended _ to connection info variables and made them
	static.
	
	* fn_tag.c (fn_saveurls): make pluralization internationalization
	friendly.

	* Makefile.am, configure.in: remove getdomainname replacement.
	main.c (get_anon_passwd): if the system doesn't provide
	getdomainname, don't use it.

	* Makefile.am, mkfntab-c.m4, mkfntab-h.m4: merge .proto files into
	m4 files.

	* readdir.c (read_dir): display progress.

2000-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_select.c, fn_tag.c, ftp.c, tag.c: remove unnecessary casts of
	basename to char *.

	* tparam.c: include ANSI C headers unconditionally.

	* fn_select.c, fn_tag.c, ftp.c, tag.c: sort headers, include
	<libgen.h> or prototype for basename.
	* configure.in: check for <libgen.h>.

	* basename.c (basename): conform to XPG4.2.

2000-12-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: stepped version to 0.10.

2000-12-07  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* getaddrinfo.c (getaddrinfo): fix mapping of HOST_NOT_FOUND
	error.
	(gai_strerror): fix capitalization of error strings.

	* getaddrinfo.c (getaddrinfo): fix bug (ai allocation at wrong
	time) found by OSF/1 cc.

	* ftp.c (ftp_cat): disable transfer rate display (since it is
	unreliable).

	* util.c (parse_url): recognize literal IPv6 addresses (RFC 2732).
	
	* fntable.fn, mkfntab-c.m4, mkfntab-h.m4, mkfntexi.m4,
	mkoptab-c.m4, mkoptab-h.m4, mkoptexi.m4, options.op: change quotes
	to << and >>.

	* configure.in: include comment in AC_DEFINE, obsoleting